# mm-ecommerce

./: .dockerignore  .env.example  .env.production.example  .gitignore  .lintstagedrc.js  .lintstagedrc.json  CLAUDE.md  PLAN.md  PRODUCTION.md  README.md  ROADMAP.md  TABBY_TAMARA.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  API_VERSIONING.md  Dockerfile  alembic.ini  package.json  pyproject.toml  pytest.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_tables.py  002_refresh_tokens.py  003_modifiers_replace_variants.py  004_modifier_is_active.py  005_promo_discount_check.py  006_cart_user_unique.py  007_i18n_foundation.py  008_cms_pages.py  009_cms_arabic_seed.py  010_cms_privacy_page.py  011_cms_home_page.py  011_performance_indexes.py  012_performance_indexes.py  013_webhook_events.py  014_email_logs.py  015_fix_brownies_slug.py  016_fix_cat_brownies_slug.py  017_cart_and_order_indexes.py  018_address_region_overhaul.py  019_address_lat_lng_required.py  020_vat_fields.py  021_drop_user_name_cols.py  022_add_payment_failed_status.py  023_add_refunded_disputed_status.py  024_missing_indexes.py  025_fix_delivery_note_i18n.py  026_add_product_stock_quantity.py  027_regions_delivery_settings.py  028_cms_about_contact_labels.py  029_blog_posts.py  030_regions_is_active_index.py  031_audit_logs.py  032_admin_passkeys.py
apps/api/app/: main.py  middleware.py
apps/api/app/core/: cache.py  config.py  deps.py  (+4 more)
apps/api/scripts/: seed_db.py  seed_i18n.py
apps/api/tests/: conftest.py
(+325 files in other folders)
